responsiveness: added media query for small phone to prevent text wrapping on success page

--- a/main.css
+++ b/main.css
@@ -114,3 +114,13 @@ body, input, select, textarea {
     border-color: #49bf9d;
     color: #49bf9d !important;
 }
+
+@media screen and (max-width: 385px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 1.25rem;
+    }
+}
